--- a/pkg/web/client.html
+++ b/pkg/web/client.html
@@ -125,23 +125,23 @@
             <table class="striped">
                 <thead>
                     <tr>
-                        <th @click="setSort('protocol')" :class="{'active': sortBy=='protocol', 'sort-desc': sortDesc}">Proto</th>
-                        <th class="text-right" @click="setSort('remote_ip')" :class="{'active': sortBy=='remote_ip', 'sort-desc': sortDesc}">Remote IP</th>
-                        <th @click="setSort('remote_port')" :class="{'active': sortBy=='remote_port', 'sort-desc': sortDesc}">Port</th>
-                        <th @click="setSort('active_connections')" :class="{'active': sortBy=='active_connections', 'sort-desc': sortDesc}">Conn</th>
-                        <th @click="setSort('session_duration')" :class="{'active': sortBy=='session_duration', 'sort-desc': sortDesc}">Duration</th>
+                        <th @click="setSort('protocol')" :class="{'active': sortBy=='protocol', 'sort-asc': !sortDesc, 'sort-desc': sortDesc}">Proto</th>
+                        <th class="text-right" @click="setSort('remote_ip')" :class="{'active': sortBy=='remote_ip', 'sort-asc': !sortDesc, 'sort-desc': sortDesc}">Remote IP</th>
+                        <th @click="setSort('remote_port')" :class="{'active': sortBy=='remote_port', 'sort-asc': !sortDesc, 'sort-desc': sortDesc}">Port</th>
+                        <th @click="setSort('active_connections')" :class="{'active': sortBy=='active_connections', 'sort-asc': !sortDesc, 'sort-desc': sortDesc}">Conn</th>
+                        <th @click="setSort('session_duration')" :class="{'active': sortBy=='session_duration', 'sort-asc': !sortDesc, 'sort-desc': sortDesc}">Duration</th>
                         <th class="text-right">
-                            RX <span class="sub-sort" @click.stop="setSort('download_speed')" :class="{'active': sortBy=='download_speed'}">S</span> |
-                            <span class="sub-sort" @click.stop="setSort('session_download')" :class="{'active': sortBy=='session_download'}">T</span>
+                            RX <span class="sub-sort" @click.stop="setSort('download_speed')" :class="{'active': sortBy=='download_speed', 'sort-asc': sortBy=='download_speed' && !sortDesc, 'sort-desc': sortBy=='download_speed' && sortDesc}">S</span> |
+                            <span class="sub-sort" @click.stop="setSort('session_download')" :class="{'active': sortBy=='session_download', 'sort-asc': sortBy=='session_download' && !sortDesc, 'sort-desc': sortBy=='session_download' && sortDesc}">T</span>
                         </th>
                         <th class="text-right">
-                            TX <span class="sub-sort" @click.stop="setSort('upload_speed')" :class="{'active': sortBy=='upload_speed'}">S</span> |
-                            <span class="sub-sort" @click.stop="setSort('session_upload')" :class="{'active': sortBy=='session_upload'}">T</span>
+                            TX <span class="sub-sort" @click.stop="setSort('upload_speed')" :class="{'active': sortBy=='upload_speed', 'sort-asc': sortBy=='upload_speed' && !sortDesc, 'sort-desc': sortBy=='upload_speed' && sortDesc}">S</span> |
+                            <span class="sub-sort" @click.stop="setSort('session_upload')" :class="{'active': sortBy=='session_upload', 'sort-asc': sortBy=='session_upload' && !sortDesc, 'sort-desc': sortBy=='session_upload' && sortDesc}">T</span>
                         </th>
                     </tr>
                 </thead>
                 <tbody>
-                    <template x-for="f in filteredFlows">
+                    <template x-for="f in filteredFlows" :key="f.protocol + ':' + f.remote_ip + ':' + f.remote_port.toString()">
                         <tr>
                             <td data-label="Protocol" x-text="f.protocol"></td>
                             <td class="text-right" data-label="Remote IP">
