feat: Add Censys.io as a new search option and remove unused variable from `app.js`.

--- a/pkg/web/client.html
+++ b/pkg/web/client.html
@@ -30,6 +30,7 @@
                     <option value="https://api.ipapi.is/?q=">ipapi.is</option>
                     <option value="https://api.ip.sb/geoip/">ip.sb</option>
                     <option value="https://ipwho.is/">ipwho.is</option>
+                    <option value="https://search.censys.io/hosts/">censys.io</option>
                 </select>
                 <label style="margin-bottom: 0; white-space: nowrap; user-select: none; cursor: pointer;">
                     <input type="checkbox" id="switch-auto-refresh-detail" name="auto_refresh" role="switch" x-model="autoRefresh">
